# HDF5_cpp_build_example

./: .gitignore  README.md
scripts/: doDebugBuild.ps1  doDebugBuild.sh
src/: CMakeLists.txt  CMakeLists_Linux.cmake  CMakeLists_Windows.cmake  hdf5_my_example.cpp  hdf5_my_example2.cpp  hdf5_my_example3.cpp  view.ipynb
